tests/reference/asr-test_const_str_access-59ff543.stderr
semantic error: 'Const' not required as strings are already immutable
 --> tests/errors/test_const_str_access.py:5:19
  |
5 |     CONST_STRING: Const[str] = "Hello, LPython!"
  |                   ^^^^^^^^^^ 
